# CLICV

./: .pre-commit-config.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: clicv---issue-template-.md
